syntax="proto3";

package pb;

option go_package="./;pb";

service BookService{
    rpc GetBook(GetBookRequest) returns (GetBookResponse){}
}

message Book{
  int64 identity=1;
    string name=2;
    string auther=3;
    string title=4;
    string typeBanker=5;
    string price=6;
    string createDate=7;
}

message GetBookRequest{
   int64 identity=1;
}
message GetBookResponse{
  Book bookInfo=1; 
  int64 code=2;
  string msg=3;
}
